boot模块：添加公用配置文件